# The-Evolution-of-Todo

./: .gitignore  README.md  pyproject.toml  todo_data.json
.claude/agents/: developer.md
.claude/skills/: todo-logic.md
.specify/memory/: constitution.md
history/prompts/001-phase1-todo-spec/: 1-phase1-todo-spec.spec.prompt.md  2-phase1-todo-app-plan.plan.prompt.md  3-phase1-todo-app-tasks.tasks.prompt.md  4-phase1-todo-app-implementation.implementation.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
specs/001-phase1-todo-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-todo-spec/checklists/: requirements.md
specs/001-phase1-todo-spec/contracts/: todo-api-contract.md
src/cli/: main.py
src/models/: task.py
src/services/: todo_service.py
tests/unit/: test_file_storage.py  test_storage.py  test_task.py  test_todo_service.py
