[project]
name = "todo-app"
version = "0.1.0"
description = "A CLI-based Todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.cli.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true